Reverting css changes that caused other overlapping issues. @bug W-1564064@ @rev mleonard@

--- a/aura-components/src/main/components/ui/tree/tree.css
+++ b/aura-components/src/main/components/ui/tree/tree.css
@@ -71,7 +71,6 @@
 	cursor: pointer;
 	display: block;
 	padding-left: 37px;
-	height: 1em;
 }
 
 .THIS li input:checked+ol {
